src/objects/loan__FinancialCalculator__c.object
<CustomObject>
    <fields>
        <fullName>loan__APR__c</fullName>
        <label>APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Base_Method_Cd__c</fullName>
        <label>Accrual Base Method Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Start_Date__c</fullName>
        <description>Date from when the interest accrual will start.</description>
        <inlineHelpText>Date from when the interest accrual will start.</inlineHelpText>
        <label>Accrual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Accrual_Start_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accrual Start days.</description>
        <label>Accrual Start Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Action__c</fullName>
        <label>Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Additional_Interest_Amt__c</fullName>
        <label>Additional Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Amortization_Calculation_Method_Cd__c</fullName>
        <label>Amortization Calculation Method Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Balance_Amt__c</fullName>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Balloon_Method_Cd__c</fullName>
        <label>Balloon Method Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Balloon_Payment_Amt__c</fullName>
        <label>Balloon Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Billing_Method_Cd__c</fullName>
        <label>Billing Method Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Contract_Dt__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Due Day</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Final_Payment_Amt__c</fullName>
        <label>Final Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Financed_Amt__c</fullName>
        <label>Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Financed_Fees__c</fullName>
        <label>Financed Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__First_Payday_Date__c</fullName>
        <description>This will be used specifically for Payday Loan and for Emoney semi monthly</description>
        <label>First Payday Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__First_Payment_Dt__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__First_Period_Calender_Days__c</fullName>
        <label>First Period Calender Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__First_Period_Interest__c</fullName>
        <label>First Period Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Flat_Interest_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flat Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Flexible_Repayment_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flexible Repayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Installment_Method_Cd__c</fullName>
        <label>Installment Method Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Amt__c</fullName>
        <label>Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Interest_Only_Period__c</fullName>
        <label>Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Amt__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Original_Loan_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This will be used for flat loans only, it will be useful where we want to calculate the interest on the original loan amount but amortize only remaining principal , ie case like view amortization schedule during the life of loan.</description>
        <label>Original Loan Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amt_2_Start_dt__c</fullName>
        <description>Date on which payment amount is changed.</description>
        <label>Payment Amt 2 Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amt_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Changed Payment Amount.</description>
        <label>Payment Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Amt__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Frequency_Cd__c</fullName>
        <label>Payment Frequency Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Prepaid_Fees__c</fullName>
        <label>Prepaid Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Principal_Payment_Amt__c</fullName>
        <label>Principal Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Type_Cd__c</fullName>
        <label>Repayment Type Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Second_Payday_Date__c</fullName>
        <description>This will be used specifically for Payday Loan and for Emoney semi monthly</description>
        <label>Second Payday Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Time_Counting_Method_Cd__c</fullName>
        <label>Time Counting Method Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Total_Finance_Charge__c</fullName>
        <label>Total Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Financed_Amt__c</fullName>
        <label>Total Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Total_Of_Payments__c</fullName>
        <label>Total Of Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>FinancialCalculator</label>
    <nameField>
        <label>FinancialCalculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinancialCalculator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>